index.css
body {
    max-height: 100%;
    margin: 0px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 20px;
    padding-left: 10px;
    padding-right: 10px;
    
    max-width: 800px;
    font-family: Helvetica, sans-serif;

    -webkit-user-select: none; /* Safari */        
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* IE10+/Edge */
    user-select: none; /* Standard */
}

input {
    margin: 5px;
    /* border: none; */
    border: none;
    border-bottom: 2px solid steelblue;
    outline: none;
    padding: 10px;
    caret-color: steelblue;
    font-size: 16px;
    color: steelblue;
}

textarea {
    margin: 5px;
    /* border: none; */
    border: none;
    border-bottom: 2px solid steelblue;
    outline: none;
    padding: 10px;
    caret-color: steelblue;
    font-size: 16px;
    color: steelblue;
}

.ingredient {
    padding: 0px 10px;
    margin:0px;
    -webkit-user-select: none; /* Safari */        
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* IE10+/Edge */
    user-select: none; /* Standard */
    transition: background-color 0.2s ease 0s;
    cursor: pointer;
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 40px;

}

.ingredient:hover {
    background-color: #eee;
    font-weight: bold;
}

.add-subtract {
    display: none;
}

.ingredient:hover .add-subtract{
    display: inline;
}

.ingredient:active .add-subtract{
    display: inline;
}

.ingredient:focus .add-subtract{
    display: inline;
}

button {
    color: #494949;
    /* text-transform: uppercase; */
    text-decoration: none;
    background: #ffffff;
    padding: 5px;
    border: 2px solid #494949;
    display: inline-block;
    transition: all 0.4s ease 0s;
    cursor: pointer;
    min-width: 30px;
    margin: 0px;
}

button:hover {
    color: #ffffff;
    background: steelblue;
    border-color: steelblue;
    transition: all 0.2s ease 0s;
}

.tag {
    background-color: lightskyblue;
    border-radius: 10px;
    padding: 3px 8px;
    margin: 5px;
    cursor: pointer;
    -webkit-user-select: none; /* Safari */        
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* IE10+/Edge */
    user-select: none; /* Standard */
}

.tag:hover {
    font-weight: bold;
}

.filter-word:hover {
    text-decoration: line-through;
}

#navigation-container {
    background-color: forestgreen;
    display: flex;
    justify-content: space-evenly;
}

.view-page-button {
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    flex-grow: 1;
    color: #AFC5DF;
    height: 45px;
}

.view-page-button:hover {
    /* background: forestgreen !important; */
    transition: all 0.2s ease 0s;
    color: white !important;
}

.vertically-allign-text {
    align-items: center;
    justify-content: center;
}

.tutorial {
    background-color: forestgreen;
    position: fixed;
    display: flex;
    justify-content: center;
    align-items: center;
    left: 0px;
    bottom: 0px;
    width: 100%;
    height: 100%;
    z-index: 1;
    color: white;
    font-size: 18px;
}

#tutorial-start {
    display: none;
}

.no-click-protector {
    position: fixed;
    z-index:1;
    width: 100%;
    height: 100%;
    top: 0px;
    left: 0px;
}

.tutorial-content {
    background-color: forestgreen;
    z-index: 2;
    text-align: center;
    max-width: 800px;
    padding: 20px;
    -webkit-user-select: none; /* Safari */        
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* IE10+/Edge */
    user-select: none; /* Standard */
}

#tutorial-step1 {
    display: none;
    height: calc(100% - 45px);
    bottom: 0px;
}

#tutorial-step2 {
    display: none;
    height: 60%;
    bottom: 0px;
}

#tutorial-step3 {
    display: none;
    height: 60%;
    bottom: 0px;
}

#tutorial-step4 {
    display: none;
    height: 60%;
    bottom: 0px;
}

#tutorial-step5 {
    display: none;
    height: 60%;
    bottom: 0px;
}

#tutorial-step6 {
    display: none;
    height: 60%;
    bottom: 0px;
}

#tutorial-step7 {
    display: none;
    height: 100%;
    bottom: 0px;
}

#tutorial-step8 {
    display: none;
    height: 100%;
    bottom: 0px;
}

.p-button {
    border-radius: 20px;
    border-width: 2px;
    border: none;
    margin: 5px;
}

.p-button:hover {
    background-color: #1bb444;
}

.skip-button {
    background-color: forestgreen !important;
    border: none;
    color: white;
    
}

.skip-button:hover {
    text-shadow: 0px 0px 15px white, 0px 0px 5px white;
}

.dot {
    height: 10px;
    width: 10px;
    background-color: #eee;
    border-radius: 50%;
    display: inline-block;
}

.tutorial-dots {
    position: fixed;

    bottom: 20px;
    left: 0px;
    text-align: center;
    width: 100%;
      

  }

.back-arrow {
    cursor: pointer;
}

.back-arrow:hover {
    color: #444
}

#help-option {
    position: fixed;
    bottom: 20px;
    right: 20px;
    width: 50px;
    height: 50px;
    border-radius: 50%;
    background-color: forestgreen;
    opacity: .5;
    color: white;
    font-weight: bold;
    display: flex;
    justify-content: center;
    align-items: center;
}

#help-option:hover {
    opacity: 1;
    transition: opacity 0.2s ease;
}

